# pyprojects

newprojects/DLwithPYKeras/: CNN.py  FunctionalAPI.py  GeneratedDemos.py  RNN.py  TensorboardDemo.py  Test.py  demo1.py  embedding.py  utils.py
newprojects/DLwithPYKeras/my_log_dir/: events.out.tfevents.1566979731.bogon
newprojects/dl study/: 1512.01712  ML algorithms.xmind  机器学习算法总结.xmind
newprojects/go study/: go语言.xmind  go语言圣经学习笔记         chapter 1.xmind
newprojects/ljp-blogs/: archieve.pages  ridge_linear_regression.py
newprojects/machine learning in action study/source-code/: test_knn.py
newprojects/paper/nlp papers/: 基于深度学习的文本分类综述.xmind
newprojects/pyProject-learning/house_predict/: pre_process.py  selectors_defined.py  tree_reg.pkl
newprojects/test/: CMakeLists.txt
newprojects/test/test/: main.cpp
newprojects/test/test.xcodeproj/: project.pbxproj
newprojects/test/test.xcodeproj/project.xcworkspace/xcuserdata/withheart.xcuserdatad/: UserInterfaceState.xcuserstate
newprojects/test/test/algorithms/: kmp.cpp
newprojects/test/test/algorithms/binary/: binary.cpp  binary.h
newprojects/test/test/algorithms/dp/: fib.cpp  serling.cpp
newprojects/test/test/algorithms/offers/: task_3_11.cpp  task_3_11.h
newprojects/test/test/algorithms/sort/: binary_search.cpp  binary_search.h  sorts.cpp  sorts.h
newprojects/test/test/om/: 1.cpp
newprojects/tools/: clean_data.py  clean_data_3.py  create_script.py  data.py  get_id.py  get_msg.scala  instances.py  pb.py  qpscount.py  run_gatling.py  share_order.py  text.json  txt2csv.py  word2vec.py
(+69 files in other folders)
